Some minor changes

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
 BOT_TOKEN=12356:your-token_example
 ADMIN_ID=123456
 USE_REDIS=False
+DATABASE=someDatabaseName
+DB_HOST=127.0.0.1
+DB_USER=dbUser
+DB_PASSWORD=dbPassword
